--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_for @user do |f| %>
   <% if @user.errors.any? %>
     <div class="error_messages">
-      <h2>Form is invalid</h2>
+      <h2><%=t :errorHeader %></h2>
       <ul>
         <% @user.errors.full_messages.each do |message| %>
           <li><%= message %></li>
@@ -13,7 +13,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label t :email %><br />
     <%= f.text_field :email %>
   </div>
   <div class="field">
@@ -21,7 +21,7 @@
     <%= f.password_field :password %>
   </div>
   <div class="field">
-    <%= f.label :confirmation %><br />
+    <%= f.label t :confirmation %><br />
     <%= f.password_field :confirmation %>
   </div>
   <div class="actions"><%= f.submit t :send %></div>
