--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,18 +15,18 @@
       <a class="navbar-brand" href="#">Savings Projection</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
-      <ul id="menu" class="nav navbar-nav">
-        <%@menu.each do |menu|%>
+      <ul id="MenuBar" class="nav navbar-nav">
+        <%@menu_bar.each do |menu|%>
           <li><%= link_to menu.name, menu.path %></li> 
         <% end %>
       </ul>
       <ul id="userControl" class="nav navbar-nav navbar-right">
         <% if current_user %>
           <li><p class="navbar-text">Logged in as <%= current_user.email %>.</p></li>
-          <li><%= link_to "Log Out", logout_path %></li>
+          <li><%= link_to '<i class="glyphicon glyphicon-log-out"></i>Log Out'.html_safe, logout_path %></li>
         <% else %>
-          <li><span class="glyphicon glyphicon-user"> <%= link_to "Sign up", signup_path %></span></li>
-          <li><span class="glyphicon glyphicon-log-in"> <%= link_to "Log in", login_path %></span></li>
+          <li><%= link_to '<i class="glyphicon glyphicon-user"></i> Sign Up'.html_safe, signup_path %></li>
+          <li><%= link_to '<i class="glyphicon glyphicon-log-in"></i> Log In'.html_safe, login_path %></li>
         <% end %>
       </ul>
     </div>
