--- a/app/views/menus/_form.html.erb
+++ b/app/views/menus/_form.html.erb
@@ -10,33 +10,33 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= form.label :name %>
+  
+  <div class="form-group">
+    <%= form.label :name, class:"control-label col-sm-2" %>
     <%= form.text_field :name, id: :menu_name %>
   </div>
 
-  <div class="field">
-    <%= form.label :level %>
+  <div class="form-group">
+    <%= form.label :level, class:"control-label col-sm-2" %>
     <%= form.number_field :level, id: :menu_level %>
   </div>
 
-  <div class="field">
-    <%= form.label :parent %>
+  <div class="form-group">
+    <%= form.label :parent, class:"control-label col-sm-2" %>
     <%= form.number_field :parent, id: :menu_parent %>
   </div>
 
-  <div class="field">
-    <%= form.label :icon %>
+  <div class="form-group">
+    <%= form.label :icon, class:"control-label col-sm-2" %>
     <%= form.text_field :icon, id: :menu_icon %>
   </div>
 
-  <div class="field">
-    <%= form.label :path %>
+  <div class="form-group">
+    <%= form.label :path, class:"control-label col-sm-2" %>
     <%= form.text_field :path, id: :menu_path %>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+  
+    <%= form.submit :submit, class: 'btn btn-default'  %>
+  
 <% end %>
