--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
-
+<div class="container table-responsive">
 <h1>Menus</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Id</th>
@@ -24,14 +24,14 @@
         <td><%= menu.parent %></td>
         <td><%= menu.icon %></td>
         <td><%= menu.path %></td>
-        <td><%= link_to 'Show', menu %></td>
-        <td><%= link_to 'Edit', edit_menu_path(menu) %></td>
-        <td><%= link_to 'Destroy', menu, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '<button type="button" class="btn btn-default">Show</button>'.html_safe, menu %></td>
+        <td><%= link_to '<button type="button" class="btn btn-default">Edit</button>'.html_safe, edit_menu_path(menu) %></td>
+        <td><%= link_to '<button type="button" class="btn btn-default">Destroy</button>'.html_safe, menu, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
+</div>
 <br>
 
-<%= link_to 'New Menu', new_menu_path %>
+<%= link_to '<button type="button" class="btn btn-primary">New Menu</button>'.html_safe, new_menu_path %>
