--- a/app/views/menus/new.html.erb
+++ b/app/views/menus/new.html.erb
@@ -1,5 +1,9 @@
+<div class="container">
 <h1>New Menu</h1>
+<form class="form-horizontal">
 
 <%= render 'form', menu: @menu %>
-
-<%= link_to 'Back', menus_path %>
+<br>
+<%= link_to '<button type="button" class="btn btn-primary">Back</button>'.html_safe, menus_path %>
+</form>
+</div>
