--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -1,3 +1,6 @@
+<div class="container">
+<h2>Menu Details</h2>
+<form class="form-horizontal">
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -24,6 +27,7 @@
   <strong>Path:</strong>
   <%= @menu.path %>
 </p>
-
-<%= link_to 'Edit', edit_menu_path(@menu) %> |
-<%= link_to 'Back', menus_path %>
+</form>
+<%= link_to '<button type="button" class="btn btn-primary">Edit</button>'.html_safe, edit_menu_path(@menu) %> |
+<%= link_to '<button type="button" class="btn btn-primary">Back</button>'.html_safe, menus_path %>
+</div>
