--- a/app/views/menus/_form.html.erb
+++ b/app/views/menus/_form.html.erb
@@ -36,7 +36,7 @@
     <%= form.text_field :path, id: :menu_path %>
   </div>
 
-  
-    <%= form.submit :submit, class: 'btn btn-default'  %>
-  
+  <div class="actions"> 
+    <%= form.submit %> 
+  </div> 
 <% end %>
